# ledanim

./: .gitignore  README.md
esp8266/: .gitignore  build_public_html.sh  config.h  platformio.ini  upload.sh  uploadfs.sh
esp8266/data/: index.html  language.js
esp8266/lib/ArduinoMD5/: MD5.cpp  MD5.h
esp8266/src/: main.ino
ledsim/: CMakeLists.txt  build.sh  build_debug.sh
ledsim/src/: crgb.h  led_anim.hpp  main.cpp  strip_anim.hpp  util.hpp
lib/: led_anim.hpp  strip_anim.hpp  util.hpp
web/: build.sh  commands.js  controller.js  index.html  strip_anim_bindings.cpp  strip_anim_bindings.js  strip_anim_bindings.js.mem
web/jslib/jquery-ui-1.12.1/: jquery-ui.js  jquery-ui.min.css  jquery-ui.theme.min.css
web/public_html/: combined.js  control.js  controller.js  index.html  led.js  strip_anim_bindings.js  strip_anim_bindings.js.mem  util.js
web/public_html/jslib/jquery-ui-1.12.1/: jquery-ui.css  jquery-ui.min.js  jquery-ui.structure.min.css
web/repo/: index.json  update.py
web/repo/ambiance/: fire.js  matrix.js  spot.js  water.js
web/repo/disco/: disco1.js  disco2.js  disco3.js  disco4.js  disco5.js  disco6.js  strobo1.js
web/repo/effects/: larsonscanner1.js  matrix2.js  police1.js
web/repo/signalling/: knightrider.js  police1.js
web/repo/xmas/: comet.js  redgreensparkle.js  sparkle.js
